# home-server

./: Cargo.toml  README.md  example.env
get-home/: Cargo.toml
get-home/src/: main.rs
home-server/: Cargo.toml
home-server/src/: main.rs
temperature-tools/: Cargo.toml
temperature-tools/src/: lib.rs
