[package]
name = "get-home"
version = "0.1.0"
authors = ["Matthew Gregg <matt.t.gregg@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.125"
structopt = "0.3.21"
temperature-tools = { path = "../temperature-tools" }
tokio = { version = "1.16.1", features = ["full"] }
