[package]
name = "home-server"
version = "0.1.0"
authors = ["Matthew Gregg <matt.t.gregg@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
temperature-tools = { path = "../temperature-tools" }
actix-web = "4.0.0-beta"
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"